--- a/package.json
+++ b/package.json
@@ -8,16 +8,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@headlessui/react": "^1.6.4",
+    "@hookform/resolvers": "^2.9.1",
+    "framer-motion": "^6",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.32.1",
+    "react-icons": "^4.4.0",
+    "react-number-format": "^4.9.3",
+    "recoil": "^0.7.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
     "cz-conventional-changelog": "3.3.0",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "react-toastify": "^9.0.4",
+    "tailwindcss": "^3.1.3",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
+  },
+  "peerDependencies": {
+    "react-toastify": "^9.0.4"
   },
   "resolutions": {
     "inquirer": "8.2.0",
