--- a/package.json
+++ b/package.json
@@ -7,7 +7,20 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
+    "cz-conventional-changelog": "3.3.0",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "react-toastify": "^9.0.4",
+    "tailwindcss": "^3.1.3",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9",
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
@@ -22,22 +35,10 @@
     "recoil": "^0.7.3",
     "yup": "^0.32.11"
   },
-  "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.7",
-    "cz-conventional-changelog": "3.3.0",
-    "postcss": "^8.4.14",
-    "postcss-import": "^14.1.0",
-    "react-toastify": "^9.0.4",
-    "tailwindcss": "^3.1.3",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
-  },
   "peerDependencies": {
-    "react-toastify": "^9.0.4"
+    "react-toastify": "^9.0.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "resolutions": {
     "inquirer": "8.2.0",
