--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.0.4",
+  "version": "0.0.2",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -51,12 +51,13 @@
     "tsc-alias": "^1.6.10",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
+    "vite-plugin-dts": "^1.2.0",
     "yup": "^0.32.11"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-toastify": "^9.0.4"
+    "react": "~18.0.0",
+    "react-dom": "~18.0.0",
+    "react-toastify": "~9.0.4"
   },
   "resolutions": {
     "inquirer": "8.2.0",
