--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -17,7 +17,7 @@
       "require": "./dist/index.cjs.js",
       "import": "./dist/index.es.js"
     },
-    "./dist/style.css": "./dist/style.css"
+    "./dist/LabUI.css": "./dist/LabUI.css"
   },
   "sideEffects": false,
   "files": [
