--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -54,11 +54,7 @@
     "vite-plugin-dts": "^1.2.0",
     "yup": "^0.32.11"
   },
-  "peerDependencies": {
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
-    "react-toastify": "~9.0.4"
-  },
+  "peerDependencies": {},
   "resolutions": {
     "inquirer": "8.2.0",
     "minimist": "1.2.6"
