--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
     "build": "run-p build:*",
     "build:scripts": "vite build",
-    "build:types": "tsc --emitDeclarationOnly && tsc-alias"
+    "build:types": "tsc --emitDeclarationOnly && tsc-alias",
+    "dev-publish": "yarn build && yarn publish --access public"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -35,6 +36,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "cz-conventional-changelog": "3.3.0",
     "framer-motion": "^6",
     "npm-run-all": "^4.1.5",
@@ -45,6 +47,7 @@
     "react-hook-form": "^7.32.1",
     "react-icons": "^4.4.0",
     "react-number-format": "^4.9.3",
+    "react-query": "^3.39.1",
     "react-toastify": "^9.0.4",
     "recoil": "^0.7.3",
     "tailwindcss": "^3.1.3",
@@ -54,7 +57,9 @@
     "vite-plugin-dts": "^1.2.0",
     "yup": "^0.32.11"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "react-query": "~3.39"
+  },
   "resolutions": {
     "inquirer": "8.2.0",
     "minimist": "1.2.6"
