--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.3.9",
+  "version": "0.4.0",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -22,7 +22,8 @@
   },
   "sideEffects": false,
   "files": [
-    "dist"
+    "dist",
+    "dist/hooks"
   ],
   "dependencies": {},
   "devDependencies": {
