--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.2.5",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
