--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "baseUrl": ".",
-    "paths": {
-      "+/*": ["src/*"]
-    }
+    "baseUrl": "src"
+    // "paths": {
+    //   "+/*": ["src/*"]
+    // }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
