--- a/package.json
+++ b/package.json
@@ -25,9 +25,16 @@
     "dist",
     "dist/hooks"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@chakra-ui/react": "^2.2.3",
+    "@vitejs/plugin-react": "^1.3.2",
+    "axios": "^0.27.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^2.9.14",
+    "vite-plugin-dts": "^1.2.1"
+  },
   "devDependencies": {
-    "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@headlessui/react": "^1.6.4",
@@ -37,9 +44,7 @@
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
-    "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
-    "axios": "^0.27.2",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -57,8 +62,6 @@
     "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "react-hook-form": "^7.32.1",
     "react-icons": "^4.4.0",
     "react-number-format": "^4.9.3",
@@ -68,8 +71,6 @@
     "tailwindcss": "^3.1.3",
     "tsc-alias": "^1.6.10",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9",
-    "vite-plugin-dts": "^1.2.0",
     "yup": "^0.32.11"
   },
   "peerDependencies": {
