--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "baseUrl": "src"
-    // "paths": {
-    //   "+/*": ["src/*"]
-    // }
+    "baseUrl": ".",
+    "paths": {
+      "+/*": ["src/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
