--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -83,6 +83,9 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
+    "@chakra-ui/react": "~2.2",
+    "react": "~18",
+    "react-dom": "~18",
     "react-query": "~3.39"
   },
   "resolutions": {
