--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "run-p build:*",
     "build:scripts": "vite build",
     "build:types": "tsc --emitDeclarationOnly && tsc-alias",
-    "dev-publish": "yarn build && yarn publish --access public",
+    "dev-publish": "yarn build && yarn version --patch  && yarn publish --access public",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -35,6 +35,7 @@
     "@chakra-ui/react": "^2.2.3",
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^2.9.14",
