--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.6.5",
+  "version": "0.6.6",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -8,7 +8,7 @@
     "build": "run-p build:*",
     "build:scripts": "vite build",
     "build:types": "tsc --emitDeclarationOnly && tsc-alias",
-    "dev-publish": "yarn build && yarn publish --access public",
+    "dev-publish": "yarn build && yarn version --patch && yarn publish --new-version --access public",
     "prepare": "husky install"
   },
   "lint-staged": {
