--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "run-p build:*",
     "build:scripts": "vite build",
     "build:types": "tsc --emitDeclarationOnly && tsc-alias",
-    "dev-publish": "yarn build && yarn version --patch && yarn publish --new-version<version> --access public",
+    "pub": "npm version patch --force && npm publish --access public",
+    "dev-publish": "yarn build && yarn pub",
     "prepare": "husky install"
   },
   "lint-staged": {
