--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -38,6 +38,7 @@
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "vite": "^2.9.14",
     "vite-plugin-dts": "^1.2.1"
   },
@@ -72,7 +73,6 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "react-hook-form": "^7.32.1",
-    "react-icons": "^4.4.0",
     "react-number-format": "^4.9.3",
     "react-query": "^3.39.1",
     "react-toastify": "^9.0.4",
@@ -86,6 +86,7 @@
     "@chakra-ui/react": "~2.2",
     "react": "~18",
     "react-dom": "~18",
+    "react-icons": "~4.4",
     "react-query": "~3.39"
   },
   "resolutions": {
