--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "0.9.9",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -33,6 +33,7 @@
   ],
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
+    "@tanstack/react-query": "^4.0.10",
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
     "nookies": "^2.5.2",
@@ -74,7 +75,6 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "react-number-format": "^4.9.3",
-    "react-query": "^3.39.1",
     "react-toastify": "^9.0.4",
     "recoil": "^0.7.3",
     "tailwindcss": "^3.1.3",
@@ -87,8 +87,7 @@
     "react": "~18",
     "react-dom": "~18",
     "react-hook-form": "~7.30",
-    "react-icons": "~4.4",
-    "react-query": "~3.39"
+    "react-icons": "~4.4"
   },
   "resolutions": {
     "inquirer": "8.2.0",
