--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "1.5.3",
+  "version": "1.5.4",
   "license": "MIT",
   "scripts": {
     "dev": "vite --port 3013",
@@ -36,12 +36,15 @@
     "@tanstack/react-query": "^4.0.10",
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
+    "next": "^12.2.4",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-number-format": "^4.9.3",
+    "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "vite": "^2.9.14",
     "vite-plugin-dts": "^1.2.1"
@@ -76,7 +79,6 @@
     "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
-    "react-toastify": "^9.0.4",
     "recoil": "^0.7.3",
     "tsc-alias": "^1.6.10",
     "typescript": "^4.6.3",
