--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@dvx-solutions/lab-ui",
-  "version": "1.7.2",
+  "version": "1.7.3",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --port 3013",
+    "dev": "vite",
     "preview": "vite preview",
     "build": "run-p build:*",
     "build:scripts": "vite build",
@@ -33,6 +33,8 @@
   ],
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
+    "@radix-ui/react-avatar": "^1.0.0",
+    "@radix-ui/react-tooltip": "^1.0.0",
     "@tanstack/react-query": "^4.0.10",
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
