--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   ],
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
+    "@changesets/cli": "^2.24.3",
     "@radix-ui/react-avatar": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@tanstack/react-query": "^4.0.10",
