--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@changesets/cli": "^2.24.3",
     "@radix-ui/react-avatar": "^1.0.0",
+    "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@tanstack/react-query": "^4.0.10",
     "@vitejs/plugin-react": "^1.3.2",
