--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
     "@changesets/cli": "^2.24.3",
+    "@hookform/resolvers": "^2.9.7",
     "@radix-ui/react-avatar": "^1.0.0",
+    "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
     "@tanstack/react-query": "^4.0.10",
@@ -51,13 +53,13 @@
     "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "vite": "^2.9.14",
-    "vite-plugin-dts": "^1.2.1"
+    "vite-plugin-dts": "^1.2.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@headlessui/react": "^1.6.4",
-    "@hookform/resolvers": "^2.9.1",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
