--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/react-query": "^4.2.3",
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "jwt-decode": "^3.1.2",
     "next": "^12.2.4",
     "nookies": "^2.5.2",
