--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
-    "@tanstack/react-query": "^4.2.3",
+    "@tanstack/react-query": "^4.3.9",
+    "@tanstack/react-query-devtools": "^4.3.9",
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
