--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
-    "@tanstack/react-query": "^4.3.9",
-    "@tanstack/react-query-devtools": "^4.3.9",
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
@@ -52,6 +50,7 @@
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-number-format": "^4.9.3",
+    "react-query": "^3.39.2",
     "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "vite": "^2.9.14",
