--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
     "@changesets/cli": "^2.24.3",
+    "@dvx-solutions/lab-ui": "^1.12.25",
     "@hookform/resolvers": "^2.9.7",
     "@radix-ui/react-avatar": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.0",
