--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
     "@changesets/cli": "^2.24.3",
-    "@dvx-solutions/lab-ui": "^1.12.31",
     "@hookform/resolvers": "^2.9.7",
     "@radix-ui/react-avatar": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.0",
@@ -43,6 +42,8 @@
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
+    "devextreme": "^22.1.5",
+    "devextreme-react": "^22.1.5",
     "jwt-decode": "^3.1.2",
     "next": "^12.2.4",
     "nookies": "^2.5.2",
