--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:scripts": "vite build",
     "build:types": "tsc --emitDeclarationOnly && tsc-alias",
     "dev-publish": "rm -rf dist && yarn build && yarn changeset && yarn changeset version && yarn changeset publish",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint . --ext js,jsx,ts,tsx --fix"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint",
@@ -34,17 +35,20 @@
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
     "@changesets/cli": "^2.24.3",
+    "@headlessui/react": "^1.6.4",
     "@hookform/resolvers": "^2.9.7",
     "@radix-ui/react-avatar": "^1.0.0",
     "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
+    "@types/lodash.debounce": "^4.0.7",
     "@vitejs/plugin-react": "^1.3.2",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "devextreme": "^22.1.5",
     "devextreme-react": "^22.1.5",
     "jwt-decode": "^3.1.2",
+    "lodash.debounce": "^4.0.8",
     "next": "^12.2.4",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
@@ -57,12 +61,12 @@
     "tailwindcss": "^3.1.8",
     "vite": "^2.9.14",
     "vite-plugin-dts": "^1.2.1",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@headlessui/react": "^1.6.4",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
